--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <header class="header-menu">
       <a><h1 class="logo">Okami</h1></a>  
-
     </header>
+    <a> Luyandrs Branco</a>
 	
 	<script src="js/index.js"></script>
 </body>
